--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@
     padding-left: 820px;
     letter-spacing: .2rem;
     margin:0;
-    background: transparent;
+    background: #F1F0EE;
     backdrop-filter: blur(10px);
     
     
@@ -165,6 +165,8 @@
   
 .roles-div h4 {
     font-weight: 300;
+  
+
 }
 
   
@@ -232,10 +234,12 @@ font-size:3rem;
     flex-direction: column;
     gap:30px;
     padding-left: 200px;
+   
 }
 .project-title h4 {
     letter-spacing: .2rem;
     font-weight: 400;
+ text-align: center;
    
 }
   
