--- a/styles.css
+++ b/styles.css
@@ -240,6 +240,7 @@ font-size:3rem;
     letter-spacing: .2rem;
     font-weight: 400;
  text-align: center;
+
    
 }
   
@@ -258,6 +259,7 @@ font-size:3rem;
     flex-direction: column;
     gap:35px;
     padding-left: 300px;
+
     
     
   }
@@ -270,8 +272,10 @@ font-size:3rem;
   .project-group {
     display: flex;
     flex-direction: row;
-    padding-left: 10px;
+    padding-left: 5px;
     gap:10px;
+    padding-top: 20px;
+    line-height: 2;
   }
 
   #contact {
