--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,21 @@
+
+
+
 * {
   font-family: "Inter", sans-serif;
   background-color: #f1f0ee;
 }
 
 #welcome-section {
-  padding-bottom: 10px;
+  padding-bottom: 10vh;
 }
 #welcome-section h1 {
   font-size: 5.3rem;
   letter-spacing: 1rem;
   text-align: center;
-  padding-bottom: 180px;
-  padding-top: 300px;
-  margin-top: 0px;
+  padding-bottom: 20vh;
+  padding-top: 18.75rem;
+  margin-top: 0;
 }
 .navbar {
   z-index: 9999;
@@ -25,13 +28,13 @@
   list-style: none;
   flex-direction: row;
   justify-content: flex-end;
-  gap: 25px;
-  padding-right: 15px;
-  padding-top: 30px;
-  padding-bottom: 10px;
+  gap: 1.5rem;
+  padding-right: 1rem;
+  padding-top: 2rem;
+  padding-bottom: 1rem;
   position: fixed;
-  top: 0px;
-  padding-left: 820px;
+  top: 0;
+  padding-left: 52rem;
   letter-spacing: 0.2rem;
   margin: 0;
   background: #f1f0ee;
@@ -49,7 +52,7 @@
   text-align: center;
   display: flex;
   letter-spacing: 0.2rem;
-  padding-left: 100px;
+  padding-left: 6rem;
 }
 #welcome-section a {
   text-decoration: none;
@@ -63,8 +66,8 @@
 }
 
 #about-me {
-  padding-bottom: 60px;
-  padding-top: 90px;
+  padding-bottom: 5rem;
+  padding-top: 7rem;
 }
 #about-me h3 {
   font-size: 3rem;
@@ -84,18 +87,18 @@
 
 .both-div {
   display: flex;
-  padding-top: 80px;
+  padding-top: 5rem;
 }
 
 #about-me img {
-  margin: 20px;
+  margin: 2rem;
 }
 #about-me p {
   letter-spacing: 0.12rem;
   text-align: justify;
   line-height: 1.7;
-  margin-left: 50px;
-  margin-right: 50px;
+  margin-left: 3rem;
+  margin-right: 3rem;
   font-weight: 300;
 }
 
@@ -121,15 +124,15 @@
   font-size: 3rem;
   letter-spacing: 0.2rem;
   text-align: center;
-  padding-top: 80px;
+  padding-top: 5rem;
 }
 
 #experience p {
   letter-spacing: 0.2rem;
   text-align: justify;
   line-height: 1.5;
-  margin-left: 50px;
-  margin-right: 50px;
+  margin-left: 3rem;
+  margin-right: 3rem;
 }
 
 .dates-div {
@@ -139,7 +142,7 @@
   display: flex;
   text-align: center;
   justify-content: center;
-  gap: 150px;
+  gap: 9rem;
   line-height: 3;
   letter-spacing: 0.12rem;
 }
@@ -152,7 +155,7 @@
   font-size: 3rem;
   letter-spacing: 0.2rem;
   text-align: center;
-  padding-top: 150px;
+  padding-top: 10rem;
 }
 
 #skills h4 {
@@ -170,7 +173,7 @@
   display: flex;
   text-align: center;
   justify-content: center;
-  gap: 100px;
+  gap: 6rem;
   line-height: 3;
   letter-spacing: 0.12rem;
 }
@@ -185,39 +188,39 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 10px;
-  padding-top: 5px;
+  gap: 0.625rem;
+  padding-top: 0.3125rem;
 }
 
 #projects {
-  padding-top: 120px;
+  padding-top: 8rem;
 
 }
 #projects h3 {
   font-size: 3rem;
   letter-spacing: 0.2rem;
   text-align: center;
-  padding-bottom: 50px;
+  padding-bottom: 2rem;
 }
 
 .label-div {
   display: flex;
-  gap: 700px;
+  gap: 40rem;
   justify-content: left;
-  padding-left: 150px;
+  padding-left: 9rem;
 }
 
 .project-title {
   display: flex;
   flex-direction: column;
-  gap: 30px;
-  padding-left: 40px;
+  gap: 2rem;
+  padding-left: 2.4rem;
 }
 .project-title h4 {
   letter-spacing: 0.2rem;
   font-weight: 400;
   text-align: left;
-  margin-left: 20px;
+  margin-left: 1.25rem;
 }
 
 .project-title a {
@@ -232,9 +235,9 @@
 .project-utlized {
   display: flex;
   flex-direction: column;
-  gap: 30px;
-  padding-left: 200px;
-  margin-right: 20px;
+  gap: 2rem;
+  padding-left: 12.5rem;
+  margin-right: 1.25rem;
 }
 
 .project-utlized h4 {
@@ -245,14 +248,14 @@
 .project-group {
   display: flex;
   flex-direction: row;
-  padding-left: 5px;
-  gap: 10px;
-  padding-top: 20px;
+  padding-left: 0.3125rem;
+  gap: 0.625rem;
+  padding-top: 1.25rem;
   line-height: 2;
 }
 
 #contact {
-  padding-top: 150px;
+  padding-top: 10vh;
 }
 #contact h3 {
   font-size: 3rem;
@@ -289,6 +292,6 @@
 }
 
 hr {
-  margin-right: 40px;
-  margin-left: 40px;
+  margin-right: 2.5rem;
+  margin-left: 2.5rem;
 }
